<resources>
    <string name="app_name">MASEKO</string>
    <string name="txtLogin">Login</string>
    <string name="nim">Nim</string>
    <string name="pin">Pin</string>
    <string name="submit">Submit</string>
    <string name="hak"><b>LUG</b> - Powered By Maseko 2019</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
