<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="152dp"
            android:layout_height="139dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_card_giftcard" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtLogin"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/divider" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <AutoCompleteTextView
                android:id="@+id/EdNIm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/nim"
                android:imeActionLabel="@string/app_name"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLength="11" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/EdPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/pin"
                android:imeActionLabel="@string/app_name"
                android:imeOptions="actionUnspecified"
                android:inputType="numberPassword"
                android:maxLength="6" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkboxIngat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ingat"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/bg_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/hak" />

    </LinearLayout>

</ScrollView>